Criação das 4 tela

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -11,14 +11,16 @@
     <div class="cabecalho">
         <a href="dadosPessoais.html"><span>Dados pessoais</span></a>
         <a href="curiosidades.html"><span>Personalidade</span></a>
-        <a href=""><span>Qualificação</span></a>
+        <a href="qualificacao.html"><span>Qualificação</span></a>
         <a href=""><span>Identificação</span></a>
     </div>
     <div class="conteudo">
-        <h3>Curiosidades</h3>
-        <span>dasdas</span>
-        <span>dasdas</span>
-        <span>dasdas</span>
+        <span><b>Curiosidades</b></span>
+        <span>Participo ativamente em projetos e comunidades open source</span>
+        <span><b>Pontos fortes</b></span>
+        <span>Consigo aprender uma linguagem de programação/framework com facilidade, habilidade de comunicação com o time, e proatividade</span>
+        <span><b>Pontos fracos</b></span>
+        <span>Insegurança no que eu faço</span>
     </div>
     
 </body>
