--- a/identificacao.html
+++ b/identificacao.html
@@ -4,27 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dadosPessoais.css">
-    <title>Dados Pessoais</title>
+    <link rel="stylesheet" href="identificacao.css">
+    <title>Identificação</title>
 </head>
-
-<body >
+<body>
     <div class="cabecalho">
         <a href="dadosPessoais.html"><span>Dados pessoais</span></a>
         <a href="curiosidades.html"><span>Personalidade</span></a>
         <a href="qualificacao.html"><span>Qualificação</span></a>
-        <a href=""><span>Identificação</span></a>
+        <a href="identificacao.html"><span>Identificação</span></a>
     </div>
     <div class="conteudo">
-        <h3>Dados Pessoais</h3>
-        <span>Nome</span>
-        <span>Willie Joaber de oliveira</span>
-        <span>Contato</span>
-        <span>Email: willie.oliveira@aluno.ifsp.edu.br</span>
-        <span>Endereço</span>
-        <span>Araraquara-SP</span>
-        <span>Redes sociais</span>
-        <span>Não possui</span>
+        <h1>Willie Joaber de oliveira</h1>
+        <img src="3135715.png" alt="Identificação">
     </div>
 </body>
 </html>
